--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -1,11 +1,7 @@
 .contactItem {
-  width: 100%;
-  max-width: 50px;
-  /* display: grid;
-  grid-template-columns: 1fr 1fr auto;
-  align-items: center; */
   display: flex;
-  gap: 15px;
+  align-items: center;
+  gap: 8px;
 }
 .deleteButton {
   text-align: center;
@@ -32,7 +28,5 @@
 }
 
 span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: inline-block;
 }
