--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -20,10 +20,12 @@
   background-color: #a4f0d9;
   padding: 6px 4px;
   border-radius: 2px;
+  transition: background-color, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .submitButton:hover,
 .submitButton:focus {
   background-color: rgb(171, 128, 211);
+  color: rgb(234, 240, 240);
 }
 
 .inputWrapper {
