--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -11,22 +11,21 @@
   background-color: #a4f0d9;
   padding: 2px 6px;
   border-radius: 2px;
+  transition: background-color, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .deleteButton:hover,
 .deleteButton:focus {
   background-color: rgb(171, 128, 211);
+  color: rgb(234, 240, 240);
 }
 .contactName {
   text-align: center;
-  font-size: 14px;
+  font-size: 12px;
   font-style: italic;
 }
 .contactNumber {
   text-align: center;
-  font-size: 12px;
-}
-
-span {
-  display: inline-block;
+  font-size: 10px;
+  font-style: italic;
 }
