--- a/src/components/ContactsList/ContactList.module.css
+++ b/src/components/ContactsList/ContactList.module.css
@@ -1,10 +1,17 @@
 .contactList {
   padding-left: 10px;
-  width: 100%;
-  max-width: 300px;
+  padding-right: 10px;
   display: flex;
   flex-direction: column;
   gap: 8px;
+  max-width: 300px;
+  width: 100%;
   max-height: 200px;
   overflow-y: auto;
+}
+.contactListWrapper {
+  display: flex;
+  max-width: 280px;
+  width: 100%;
+  padding-bottom: 30px;
 }
